@@ -10,6 +10,7 @@ from eea.cache.browser.interfaces import VARNISH
 
 logger = logging.getLogger('eea.cache')
 
+
 class InvalidateMemCache(BrowserView):
     """ View to invalidate memcache
     """
@@ -42,8 +43,48 @@ class InvalidateMemCache(BrowserView):
         event.notify(InvalidateCacheEvent(raw=True, dependencies=[uid]))
         return "Memcache invalidated"
 
+
+class InvalidateVarnish(BrowserView):
+    """ View to invalidate Varnish
+    """
+
+    def relatedItems(self, **kwargs):
+        """ Invalidate related Items
+        """
+        getRelatedItems = getattr(self.context, 'getRelatedItems', lambda: [])
+        for item in getRelatedItems():
+            invalidate_cache = queryMultiAdapter(
+                (item, self.request), name='varnish.invalidate',
+                default=lambda:None)
+            invalidate_cache()
+        return 'Varnish invalidated for relatedItems'
+
+    def backRefs(self, **kwargs):
+        """ Invalidate back references
+        """
+        getBRefs = getattr(self.context, 'getBRefs', lambda: [])
+        for item in getBRefs():
+            invalidate_cache = queryMultiAdapter(
+                (item, self.request), name='varnish.invalidate',
+                default=lambda:None)
+            invalidate_cache()
+        return 'Varnish invalidated for back references'
+
+    def __call__(self, **kwargs):
+        if not VARNISH:
+            return "Varnish invalidated"
+
+        try:
+            if VARNISH.purge.isPurged(self.context):
+                event.notify(VARNISH.purge.Purge(self.context))
+        except Exception, err:
+            logger.exception(err)
+
+        return "Varnish invalidated"
+
+
 class InvalidateCache(BrowserView):
-    """ View to invalidate all cache varnish and memcache
+    """ View to invalidate Varnish and Memcache
     """
 
     def relatedItems(self, **kwargs):
@@ -69,20 +110,14 @@ class InvalidateCache(BrowserView):
         return 'Cache invalidated for back references'
 
     def __call__(self, **kwargs):
-
         # Memcache
         invalidate_memcache = queryMultiAdapter((self.context, self.request),
                                                 name='memcache.invalidate')
         invalidate_memcache()
 
         # Varnish
-        if not VARNISH:
-            return "Cache invalidated"
+        invalidate_varnish = queryMultiAdapter((self.context, self.request),
+                                                name='varnish.invalidate')
+        invalidate_varnish()
 
-        try:
-            if VARNISH.purge.isPurged(self.context):
-                event.notify(VARNISH.purge.Purge(self.context))
-        except Exception, err:
-            logger.exception(err)
-
-        return "Cache invalidated"
+        return "Varnish and Memcache invalidated"
