@@ -3,12 +3,16 @@ Changelog
 
 7.1-dev - (unreleased)
 ----------------------
+* Feature: invalidate memcache now appear on cache form as one of the options.
+  [ghicaale refs #21143]
+* Feature: created handler to invalidate only varnish.
+  [ghicaale refs #21143]
 
 7.0 - (2014-08-27)
 ------------------
 * Upgrade step: Within "Plone > Site setup > Add-ons" install EEA Cache
   [voineali refs #20678]
-* Pre-upgrade-step: Also add eea.cache within buildout zcml directive before
+* Pre-upgrade step: Also add eea.cache within buildout zcml directive before
   eea.cache-overrides
   [voineali refs #20678]
 * Feature: Added a browser view called **cache.invalidate** that allows
